# MAR

./: LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: architecture.md  configuration.md  examples.md  getting-started.md  index.md  mkdocs.yaml  requirements.txt
docs/content/: agents.md  api-reference.md  contributing.md  index.md  retrievers.md
mar/agents/: orchestrator.py  planner_agent.py  retrieval_agent.py  retriever_agent.py
mar/datasets/: base.py  beir_dataloader.py  schemas.py
mar/evaluation/: base.py  beir_evaluator.py
mar/logging/: setup_logging.py
mar/models/: base.py  litellm.py  schemas.py
mar/retrievers/: schemas.py
mar/retrievers/dense/: bge.py  contriever.py  dense.py
mar/retrievers/lexical/: base.py  bm25.py  splade.py
mar/tools/: llm_filter.py  llm_plan.py  query_analysis.py  retrieve_tool.py  schemas.py
multiagentic_retriever/agents/: query_expansion.py  retrieval_agent.py
multiagentic_retriever/evaluate/: beir_evaluate.py
src/multiagentic_retriever/: __init__.py
